--- a/Assets/UI/SettingsUI.uxml
+++ b/Assets/UI/SettingsUI.uxml
@@ -7,6 +7,10 @@
             <ui:VisualElement style="flex-grow: 1;">
                 <ui:Slider label="Music Sound" high-value="1" name="VolumeSlider" style="color: rgb(255, 255, 255); width: 90%;" />
                 <ui:Toggle label="Mute Sound" name="MuteToggle" style="background-color: rgba(255, 255, 255, 0); color: rgb(255, 255, 255);" />
+                <ui:VisualElement style="flex-grow: 1; flex-direction: row; margin-right: 0;">
+                    <ui:Button parse-escape-sequences="true" display-tooltip-when-elided="true" name="EnglishButton" style="background-image: url(&quot;project://database/Assets/Sprites/flags.png?fileID=-1445192744&amp;guid=42e61a1100927e04fa9ef8f0c3220b7b&amp;type=3#flags_1&quot;); -unity-background-scale-mode: scale-and-crop; width: 10%; height: 10%; background-color: rgba(188, 188, 188, 0); align-self: flex-start; flex-direction: row;" />
+                    <ui:Button parse-escape-sequences="true" display-tooltip-when-elided="true" name="PolishButton" style="background-image: url(&quot;project://database/Assets/Sprites/flags.png?fileID=-1224541667&amp;guid=42e61a1100927e04fa9ef8f0c3220b7b&amp;type=3#flags_0&quot;); width: 10%; height: 10%; background-color: rgba(188, 188, 188, 0); -unity-background-scale-mode: scale-and-crop; align-self: flex-start; flex-direction: row; margin-left: 10px;" />
+                </ui:VisualElement>
             </ui:VisualElement>
             <ui:VisualElement name="VisualElement" style="flex-grow: 0; width: 45%;">
                 <ui:Label tabindex="-1" text="Volume" parse-escape-sequences="true" display-tooltip-when-elided="true" name="VolumeLabel" style="color: rgb(255, 255, 255); margin-left: 20px;" />
