--- a/Assets/UI/stylemenu.uss
+++ b/Assets/UI/stylemenu.uss
@@ -13,6 +13,7 @@
     border-right-color: rgba(0, 0, 0, 0);
     border-top-color: rgba(0, 0, 0, 0);
     border-bottom-color: rgba(0, 0, 0, 0);
+    font-size: 24px;
 }
 
 .CreditsText {
@@ -48,4 +49,5 @@
     border-right-width: 2px;
     border-bottom-width: 2px;
     border-left-width: 2px;
+    font-size: 24px;
 }
