Settings - Zmiany Wizualne
Zwiększenie czcionki, wycentrowanie elementów na środku ekranu, dodanie obramowania po najechaniu na flagi do wyboru języka

--- a/Assets/UI/stylemenu.uss
+++ b/Assets/UI/stylemenu.uss
@@ -51,3 +51,25 @@
     border-left-width: 2px;
     font-size: 24px;
 }
+
+.LanguageButton:hover {
+    border-left-color: rgb(255, 255, 255);
+    border-right-color: rgb(255, 255, 255);
+    border-top-color: rgb(255, 255, 255);
+    border-bottom-color: rgb(255, 255, 255);
+    border-top-width: 5px;
+    border-right-width: 5px;
+    border-bottom-width: 5px;
+    border-left-width: 5px;
+}
+
+.LanguageButton {
+    border-left-color: rgb(255, 255, 255);
+    border-right-color: rgb(255, 255, 255);
+    border-top-color: rgb(255, 255, 255);
+    border-bottom-color: rgb(255, 255, 255);
+    border-top-width: 0;
+    border-right-width: 0;
+    border-bottom-width: 0;
+    border-left-width: 0;
+}
